# artificial-nose-zephyr

./: README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  edge-impulse-forwarder.conf  prj.conf  sample.yaml
app/boards/: esp32c3_devkitm.conf  esp32c3_devkitm_esp32_procpu.overlay  m5stack_atoms3.conf  m5stack_atoms3.overlay  m5stack_core2.conf  m5stack_core2.overlay  m5stack_core2_esp32_procpu.conf  native_posix_64.conf  native_posix_64.overlay  qemu_cortex_m0.overlay  wio_terminal.conf  wio_terminal.overlay
app/edge-impulse-sdk/porting/: ei_classifier_porting.h
app/include/: app_threads.h  gui.h  sensor_acquisition.h  zbus_messages.h
app/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
app/src/: app_threads.h  gui.c  inference.cpp  main.c  mqtt.c  sensor_acquisition.c
app/src/gui_screens/: live_chart.c
app/tflite-model/: tflite_learn_143_compiled.cpp  tflite_learn_143_compiled.h  trained_model_ops_define.h
boards/: README.md
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/multichannel_gas_v2/: CMakeLists.txt  Kconfig  grove_multichannel_gas_v2.c  grove_multichannel_gas_v2.h
dts/bindings/sensor/: seeed,grove-multichannel_gas_v2.yaml
tests/lib/custom_lib/: testcase.yaml
